--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,7 +1,34 @@
 .menu {
+    position: fixed;
+    width: 100%;
+    height: 114px;
+    top: 0;
+    left: 0;
+}
+
+.menu__wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: absolute;
+    width: 100%;
+    height: inherit;
+    top: -100%;
+    left: 0;
+    height: inherit;
+    transition: .4s background-color, 2.2s top;
+}
+
+.menu:hover .menu__wrapper {
+    top: 0;
+    background-color: var(--menu-background-color);
+}
+
+.menu__list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style-type: none;
     width: 577px;
 }
 
